<resources>
    <string name="app_name">Checkbox &amp; RadioButton</string>
    <string name="et1">Dame el primer valor</string>
    <string name="et2">Dame el segundo valor</string>
    <string name="rb1">Suma</string>
    <string name="rb2">Resta</string>
    <string name="cb1">Suma</string>
    <string name="cb2">Resta</string>
    <string name="boton">Calcular</string>
    <string name="tv">Resultado</string>
</resources>
